// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PetitionSummary component when all attributes are verified 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PetitionSummary
    addCredential={[Function]}
    attributes={
      Array [
        Object {
          "object": "Barcelona",
          "predicate": "schema:addressLocality",
          "provenance": Object {
            "credentials": "0123456789",
            "source": "http://atlantis-decode.s3-website-eu-west-1.amazonaws.com",
          },
          "scope": "can-access",
          "subject": "(Alpaca)",
        },
      ]
    }
    getPetition={[Function]}
    goToSignConfirmation={[Function]}
    petition={
      Object {
        "closingDate": "today",
        "description": "world",
        "id": "1234",
        "isEthereum": "false",
        "title": "hello",
      }
    }
    petitionLink="http://something.com"
    walletId="something"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Spinner
              animation="none"
              cancelable={false}
              color="white"
              overlayColor="rgba(0, 0, 0, 0.25)"
              size="large"
              textContent=""
              textStyle={
                Object {
                  "color": "#FFF",
                }
              }
              visible={false}
            />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 20,
                }
              }
            >
              hello
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 15,
                }
              }
            >
              world
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.54)",
                  "fontSize": 12,
                }
              }
            >
              Closing date: 
              today
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 10,
                "marginLeft": 16,
              }
            }
          >
            Your Information
          </Text>
          <Attribute
            buttonCallback={[Function]}
            isVerified={true}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 12,
                "marginLeft": 16,
                "marginTop": 10,
              }
            }
          >
            *Required fields
          </Text>
        </ScrollViewMock>,
        <SignButton
          enabled={true}
          onPress={[Function]}
        />,
      ],
      "style": Object {
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                world
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  }
                }
              >
                Closing date: 
                today
              </Text>
            </View>,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                }
              }
            >
              Your Information
            </Text>,
            <Attribute
              buttonCallback={[Function]}
              isVerified={true}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                }
              }
            >
              *Required fields
            </Text>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "none",
                "cancelable": false,
                "color": "white",
                "overlayColor": "rgba(0, 0, 0, 0.25)",
                "size": "large",
                "textContent": "",
                "textStyle": Object {
                  "color": "#FFF",
                },
                "visible": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  world
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    }
                  }
                >
                  Closing date: 
                  today
                </Text>,
              ],
              "style": Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "hello",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "hello",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "world",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  },
                },
                "ref": null,
                "rendered": "world",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": Array [
                    "Closing date: ",
                    "today",
                  ],
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  },
                },
                "ref": null,
                "rendered": Array [
                  "Closing date: ",
                  "today",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Your Information",
              "ellipsizeMode": "tail",
              "style": Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 10,
                "marginLeft": 16,
              },
            },
            "ref": null,
            "rendered": "Your Information",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "buttonCallback": [Function],
              "isVerified": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "*Required fields",
              "ellipsizeMode": "tail",
              "style": Object {
                "fontSize": 12,
                "marginLeft": 16,
                "marginTop": 10,
              },
            },
            "ref": null,
            "rendered": "*Required fields",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": true,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                world
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  }
                }
              >
                Closing date: 
                today
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                }
              }
            >
              Your Information
            </Text>
            <Attribute
              buttonCallback={[Function]}
              isVerified={true}
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                }
              }
            >
              *Required fields
            </Text>
          </ScrollViewMock>,
          <SignButton
            enabled={true}
            onPress={[Function]}
          />,
        ],
        "style": Object {
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#FFF",
                    "margin": 16,
                    "padding": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  world
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    }
                  }
                >
                  Closing date: 
                  today
                </Text>
              </View>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 10,
                    "marginLeft": 16,
                  }
                }
              >
                Your Information
              </Text>,
              <Attribute
                buttonCallback={[Function]}
                isVerified={true}
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 12,
                    "marginLeft": 16,
                    "marginTop": 10,
                  }
                }
              >
                *Required fields
              </Text>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "animation": "none",
                  "cancelable": false,
                  "color": "white",
                  "overlayColor": "rgba(0, 0, 0, 0.25)",
                  "size": "large",
                  "textContent": "",
                  "textStyle": Object {
                    "color": "#FFF",
                  },
                  "visible": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 20,
                        "fontWeight": "500",
                        "marginBottom": 20,
                      }
                    }
                  >
                    hello
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "marginBottom": 15,
                      }
                    }
                  >
                    world
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 12,
                      }
                    }
                  >
                    Closing date: 
                    today
                  </Text>,
                ],
                "style": Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "hello",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    },
                  },
                  "ref": null,
                  "rendered": "hello",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "world",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    },
                  },
                  "ref": null,
                  "rendered": "world",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": Array [
                      "Closing date: ",
                      "today",
                    ],
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    "Closing date: ",
                    "today",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Your Information",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                },
              },
              "ref": null,
              "rendered": "Your Information",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "buttonCallback": [Function],
                "isVerified": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "*Required fields",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                },
              },
              "ref": null,
              "rendered": "*Required fields",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": true,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`renders PetitionSummary component when no attributes exist 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PetitionSummary
    addCredential={[Function]}
    attributes={Array []}
    getPetition={[Function]}
    goToSignConfirmation={[Function]}
    petition={
      Object {
        "closingDate": "today",
        "description": "world",
        "id": "1234",
        "isEthereum": "false",
        "title": "hello",
      }
    }
    petitionLink="http://something.com"
    walletId="something"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Spinner
              animation="none"
              cancelable={false}
              color="white"
              overlayColor="rgba(0, 0, 0, 0.25)"
              size="large"
              textContent=""
              textStyle={
                Object {
                  "color": "#FFF",
                }
              }
              visible={false}
            />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 20,
                }
              }
            >
              hello
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 15,
                }
              }
            >
              world
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.54)",
                  "fontSize": 12,
                }
              }
            >
              Closing date: 
              today
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 10,
                "marginLeft": 16,
              }
            }
          >
            Your Information
          </Text>
          <Attribute
            buttonCallback={[Function]}
            isVerified={false}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 12,
                "marginLeft": 16,
                "marginTop": 10,
              }
            }
          >
            *Required fields
          </Text>
        </ScrollViewMock>,
        <SignButton
          enabled={false}
          onPress={[Function]}
        />,
      ],
      "style": Object {
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                world
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  }
                }
              >
                Closing date: 
                today
              </Text>
            </View>,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                }
              }
            >
              Your Information
            </Text>,
            <Attribute
              buttonCallback={[Function]}
              isVerified={false}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                }
              }
            >
              *Required fields
            </Text>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "none",
                "cancelable": false,
                "color": "white",
                "overlayColor": "rgba(0, 0, 0, 0.25)",
                "size": "large",
                "textContent": "",
                "textStyle": Object {
                  "color": "#FFF",
                },
                "visible": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  world
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    }
                  }
                >
                  Closing date: 
                  today
                </Text>,
              ],
              "style": Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "hello",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "hello",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "world",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  },
                },
                "ref": null,
                "rendered": "world",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": Array [
                    "Closing date: ",
                    "today",
                  ],
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  },
                },
                "ref": null,
                "rendered": Array [
                  "Closing date: ",
                  "today",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Your Information",
              "ellipsizeMode": "tail",
              "style": Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginBottom": 10,
                "marginLeft": 16,
              },
            },
            "ref": null,
            "rendered": "Your Information",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "buttonCallback": [Function],
              "isVerified": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "*Required fields",
              "ellipsizeMode": "tail",
              "style": Object {
                "fontSize": 12,
                "marginLeft": 16,
                "marginTop": 10,
              },
            },
            "ref": null,
            "rendered": "*Required fields",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": false,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                world
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": 12,
                  }
                }
              >
                Closing date: 
                today
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                }
              }
            >
              Your Information
            </Text>
            <Attribute
              buttonCallback={[Function]}
              isVerified={false}
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                }
              }
            >
              *Required fields
            </Text>
          </ScrollViewMock>,
          <SignButton
            enabled={false}
            onPress={[Function]}
          />,
        ],
        "style": Object {
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#FFF",
                    "margin": 16,
                    "padding": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  world
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    }
                  }
                >
                  Closing date: 
                  today
                </Text>
              </View>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 10,
                    "marginLeft": 16,
                  }
                }
              >
                Your Information
              </Text>,
              <Attribute
                buttonCallback={[Function]}
                isVerified={false}
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 12,
                    "marginLeft": 16,
                    "marginTop": 10,
                  }
                }
              >
                *Required fields
              </Text>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "animation": "none",
                  "cancelable": false,
                  "color": "white",
                  "overlayColor": "rgba(0, 0, 0, 0.25)",
                  "size": "large",
                  "textContent": "",
                  "textStyle": Object {
                    "color": "#FFF",
                  },
                  "visible": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 20,
                        "fontWeight": "500",
                        "marginBottom": 20,
                      }
                    }
                  >
                    hello
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "marginBottom": 15,
                      }
                    }
                  >
                    world
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 12,
                      }
                    }
                  >
                    Closing date: 
                    today
                  </Text>,
                ],
                "style": Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "hello",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    },
                  },
                  "ref": null,
                  "rendered": "hello",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "world",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    },
                  },
                  "ref": null,
                  "rendered": "world",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": Array [
                      "Closing date: ",
                      "today",
                    ],
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 12,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    "Closing date: ",
                    "today",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Your Information",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 10,
                  "marginLeft": 16,
                },
              },
              "ref": null,
              "rendered": "Your Information",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "buttonCallback": [Function],
                "isVerified": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "*Required fields",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 12,
                  "marginLeft": 16,
                  "marginTop": 10,
                },
              },
              "ref": null,
              "rendered": "*Required fields",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": false,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
